--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,12 @@
 * {
   font-style: normal;
   font-family: Inter, sans-serif;
+  color: white;
+}
+
+body {
+  height: 100vh;
+  overflow: hidden;
 }
 
 @layer utilities {
@@ -13,15 +19,17 @@
   }
 }
 
+
+
 .gradient-banner {
   background: radial-gradient(
       100.32% 96.29% at 102.99% -8.84%,
-      rgba(255, 255, 255, 0.94) 0%,
+      rgba(10, 0, 47, 0.94) 0%,
       rgba(255, 255, 255, 0) 100%
     ),
-    linear-gradient(313deg, rgba(255, 255, 255, 0) 21.76%, #fff 105.16%),
-    linear-gradient(147deg, rgba(186, 227, 255, 0) 82.46%, #dfeeff 144.56%),
-    linear-gradient(268deg, #b5e1ff -8.51%, #f1ebff 95.96%);
+    linear-gradient(313deg, rgba(255, 255, 255, 0) 21.76%, #000000 105.16%),
+    linear-gradient(147deg, rgba(186, 227, 255, 0) 82.46%, #000000 144.56%),
+    linear-gradient(268deg, #00101a -8.51%, #0a0021 95.96%);
   background-blend-mode: normal, normal, multiply, normal;
 }
 
@@ -29,4 +37,129 @@
   .gradient-background {
     @apply gradient-banner;
   }
+}
+
+
+.landing-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+
+
+/* globals.css */
+
+.hero-cta {
+  width: 100%;
+  margin-top: 20px;
+}
+
+/* Header Styles */
+.header {
+  padding: 2px 2rem; /* Add padding for spacing */
+}
+
+.nav {
+  display: flex; /* Use flexbox for alignment */
+  justify-content: space-between; /* Space items evenly */
+  align-items: center; /* Center items vertically */
+}
+
+.nav-logo {
+  font-size: 24px;
+  text-decoration: none;
+}
+
+.nav-title {
+  font-size: 1.75rem; /* Larger font size for the app title */
+  font-weight: bold; /* Bold font for emphasis */
+  transition: color 0.3s; /* Smooth transition for hover effect */
+}
+
+
+.nav-list {
+  display: flex; /* Use flexbox for navigation items */
+  list-style: none; /* Remove default list styles */
+  padding: 0; /* Remove default padding */
+  margin: 0; /* Remove default margin */
+}
+
+.nav-item {
+  margin-left: 2rem; /* Space between navigation items */
+  text-decoration: none; /* Remove underline from links */
+  color: #fff; /* Link color */
+  font-size: 1.1rem; /* Slightly larger font size for links */
+  position: relative; /* For the pseudo-element */
+  transition: color 0.3s; /* Smooth transition for hover effect */
+}
+
+.nav-item:hover {
+  color: #7E47FF; /* Change color on hover */
+}
+
+/* Add a bottom border on hover */
+.nav-item::after {
+  content: '';
+  display: block;
+  height: 2px; /* Height of the underline */
+  background: transparent; /* Default background */
+  position: absolute; /* Positioning the underline */
+  left: 0;
+  bottom: -5px; /* Adjust vertical position */
+  width: 100%; /* Full width */
+  transition: background 0.3s; /* Smooth transition for the underline */
+}
+
+.nav-item:hover::after {
+  background: #7E47FF; /* Color of the underline on hover */
+}
+
+/* Footer Styles */
+.footer {
+  padding: 1rem 2rem; /* Consistent padding with header */
+  text-align: center; /* Center footer text */
+  color: #bbb; /* Lighter color for footer text */
+}
+
+.footer-container {
+  display: flex;
+  min-width: 100%;
+  align-items: center;
+  justify-content: center;
+  gap: 2em;
+}
+
+.divider {
+  height: 20px;
+  width: 1px;
+  background-color: #ffffff55;
+}
+
+.footer-text {
+  margin: 0.5rem 0; /* Spacing for footer text */
+  color: #ffffff95;
+}
+
+.footer-list {
+  display: flex; /* Flex layout for footer links */
+  justify-content: center; /* Center footer links */
+  list-style: none; /* Remove default list styles */
+  padding: 0; /* Remove default padding */
+  margin: 0; /* Remove default margin */
+}
+
+.footer-item {
+  margin-left: 1rem; /* Space between footer items */
+  text-decoration: none; /* Remove underline from footer links */
+  color: #ffffff80;
+  transition: color 0.3s; /* Smooth transition for hover effect */
+}
+
+.footer-item:hover {
+  color: #fff; /* Change footer link color on hover */
+}
+
+/* Main Content */
+.main-content {
+  padding: 2rem; /* Add padding to main content */
 }
